code/repos/new/deployment/kubernetes/mongoexpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo-express
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/name: mongo-express
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: mongo-express
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kataszer-mongoexpress.kube.codespring.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 9000
